# website-counter

./: LICENCE  README.md
api/: Cargo.toml
api/migrations/: 20230311113736_initial_setup.sql
api/src/: main.rs
web/: index.html  index.js  package.json
