[package]
name = "website-counter"
version = "0.1.0"
authors = ["Matthias Kainer <mail@matthias-kainer.de>"]
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "postgres", "chrono", "macros", "migrate", "uuid", "json" ] }
dotenv = "0.15.0"
env_logger = "0.10.0"
anyhow = "1.0.69"
